--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
     <iframe id="player" type="text/html" width="640" height="360"
-  src="https://www.youtube.com/watch?v=Ij-J6M1jmEw"
+  src="https://streamable.com/ts5kkl"
   frameborder="0"></iframe>
 
 	</body>
